# modm-cli

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
